Fix: buttons alignment

--- a/frontend/shared/scss/components/buttons.scss
+++ b/frontend/shared/scss/components/buttons.scss
@@ -66,7 +66,9 @@
         display: inline-flex;
 
         // Ignore stretch when a button is directly inside the main of st-view (which has display flex)
-        align-self: flex-start;
+        .st-view > main > & {
+            align-self: flex-start;
+        }
 
         &:active {
             transform: scale(0.95, 0.95);
